umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_1,2-dichlorocyclohexane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h#v3" "1" "C#h#v3" "2" "C#h2#v2" "3" "C#h2#v2" "4" "C#h2#v2" "5" "C#h2#v2" "6" "Cl#n3#v" "7" "Cl#n3#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [5 0 "1"] [0 6 "1"] [1 7 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h#v3" "1" "C#h#v3" "2" "C#h2#v2" "3" "C#h2#v2" "4" "C#h2#v2" "5" "C#h2#v2" "6" "Cl#n3#v" "7" "Cl#n3#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [5 0 "1"] [0 6 "1"] [1 7 "1"]] :charge 0 :spin "#u0 #s1"}}}
