umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_1,2-dichloroethane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["Cl#n3#v" "C#h2#v2" "C#h2#v2" "Cl#n3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["Cl#n3#v" "C#h2#v2" "C#h2#v2" "Cl#n3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
