umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_1,2-dimethylhydrazine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "N#h#n#v2" "2" "N#h#n#v2" "3" "C#h3#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "N#h#n#v2" "2" "N#h#n#v2" "3" "C#h3#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"]] :charge 0 :spin "#u0 #s1"}}}
