umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_2,2-dimethylpropan-2-ol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "C#h3#v" "C#h3#v" "C#v4" "O#h#n2#v"] :bonds [[0 3 "1"] [1 3 "1"] [2 3 "1"] [3 4 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "C#h3#v" "C#h3#v" "C#v4" "O#h#n2#v"] :bonds [[0 3 "1"] [1 3 "1"] [2 3 "1"] [3 4 "1"]] :charge 0 :spin "#u0 #s1"}}}
